fix alignment of blog posts

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -102,7 +102,6 @@ html, body {
 }
 #sidebar-container-main {
   width: 133px;
-  height: 200px;
   float: left;
   text-align: left;
 }
